--- a/src/app/components/mostrar/mostrar.component.html
+++ b/src/app/components/mostrar/mostrar.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-nav-usuario></app-nav-usuario>
 
 <div class="full-height">
     <table class="table table-hover table-striped">
