--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,6 +2,10 @@
 <h2>Registro de usuario</h2>
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="mb-3">
+        <label class="form-label">Nombre</label>
+        <input type="text" class="form-control" formControlName="nombre">
+    </div>
+    <div class="mb-3">
         <label class="form-label">Email</label>
         <input type="text" class="form-control" formControlName="email">
     </div>
