--- a/src/app/components/crear/crear.component.html
+++ b/src/app/components/crear/crear.component.html
@@ -22,6 +22,6 @@
     </div>
 
     <button type="submit" class="btn btn-success">Guardar</button><br><br>
-    <button type="button" class="btn btn-primary" routerLink="/Home">Regresar</button>
+    <button type="button" class="btn btn-primary" routerLink="/Home2">Regresar</button>
 
 </form>
