--- a/src/app/components/editar/editar.component.html
+++ b/src/app/components/editar/editar.component.html
@@ -24,6 +24,6 @@
     </div>
 
     <button type="submit" class="btn btn-success" [disabled]="!postForm.valid">Actualizar</button><br><br>
-    <button type="button" class="btn btn-primary" routerLink="/Home">Regresar</button>
+    <button type="button" class="btn btn-primary" routerLink="/Mostrar">Regresar</button>
 
 </form>
