--- a/src/app/components/crear/crear.component.html
+++ b/src/app/components/crear/crear.component.html
@@ -12,6 +12,18 @@
         <label class="form-label">Calle</label>
         <input formControlName="calle" type="text" class="form-control" required>
     </div>
+
+    <div class="mb-3">
+        <label class="form-label">Municipio</label>
+        <select formControlName="municipio" class="form-control" required>
+            <option value="chalco">Chalco</option>
+            <option value="tlalmanalco">Tlalmanalco</option>
+            <option value="valle_de_chalco">Valle de Chalco</option>
+            <option value="tlapala">Tlapala</option>
+            <option value="cocotitlan">Cocotitlán</option>
+        </select>
+    </div>
+
     <div class="mb-3">
         <label class="form-label">Colonia</label>
         <input formControlName="colonia" type="text" class="form-control" required>
@@ -21,7 +33,9 @@
         <input formControlName="litros" type="text" class="form-control" required>
     </div>
 
+
     <button type="submit" class="btn btn-success">Guardar</button><br><br>
     <button type="button" class="btn btn-primary" routerLink="/Home2">Regresar</button>
+
 
 </form>
